assets/styles/main.less
@import (inline) "../../node_modules/materialize-css/bin/materialize.css";
@import "landing.less";

html body {
	overflow-x: hidden;
	line-height: normal;
	box-sizing:content-box;
}

body {
	font-family: "Ubuntu";
}

nav {
	padding:3px;
}
.container h2 {
	text-align: center;
}
#sortable {
	margin:0;
}
.col {
    h2 {
    	font-size: 20px;
    	margin:0;
    }
    a {
    	display: block;
    	margin-bottom:10px;
    }
}
li .card.small {
	height:110px;

    .card-image {
    	height:80px;
    }

    .card-image span {
    	padding: 20px 20px 2px 17px;
    }

    .card-content {
    	height:30px;
    	padding:9px;
    }

    .card-image img {
    	object-fit: cover;
    	 height:80px;
    }
}
#tool-box {
    a {
        margin-top:22px;
    }
}
.parallax-container {
	width:100vw;
}

.input-field label {
	left: 0;
}

.fixed-action-btn {
	right: 50px;
	ul {
		margin: 0;
	}
}

.buttons {
	margin-top: 25px;
}

/*.col .fixed-action-btn ul {
	left:9px;
} */

.sortable {
	li {
		a {
			display: inline;
			color: inherit;
		}

		.bin {
			transition: 0.5s opacity;
			opacity: 0;
			float: right;
			margin-left: -30px;
			z-index: 1000;
		}
	}

	li:hover .bin {
		opacity: 1;
	}
}

input[type=range]::-moz-focus-outer {
	border: 0;
}

.range-field {
	line-height: 15px;
}

.cog {
	transition: 0.5s opacity;
	float: right;
	margin-top: 30px;
	z-index: 500;
	opacity: 0;
}

li:hover .cog {
	opacity: 1;
}

